--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=QR-for-all
+APP_NAME=SC-Heroes-Silencio-NewCampaing
 APP_ENV=local
 APP_KEY=base64:4bbzTAF2eKWd11nrZ5Cp4tR2kNKQcyPrDps/R2rk5WA=
 APP_DEBUG=true
